[UPDATE] update add cars type sell and remove kilo
